--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-tensorflow==1.3.0
+tensorflow==1.4.0
+tensorflow-gpu==1.4.0
 numpy
 Keras==2.0.9
 opencv-python
 sklearn
 h5py==2.7.1
 matplotlib==2.1.0
+
+
+python-socketio==3.1.2
+Pillow==6.0.0
+Flask==1.0.2
+Flask-SocketIO==3.3.2
+eventlet==0.24.1
+tornado==6.0.2
